@@ -39,6 +39,7 @@
 #include "area.h"
 #include "code.h"
 #include "commands.h"
+#include "common.h"
 #include "error.h"
 #include "expr.h"
 #include "filestack.h"
@@ -48,7 +49,6 @@
 #include "lex.h"
 #include "local.h"
 #include "main.h"
-#include "os.h"
 #include "output.h"
 #include "put.h"
 #include "symbol.h"
